Closure_153/evosuite/fixing/evosuite-report-clz/test_build.log
cd /home/liumengjiao/Desktop/CI/Benchmark/../bugs/Closure_153_buggy && timeout 300000 javac -cp  /home/liumengjiao/Desktop/defects4j/framework/lib/test_generation/generation/evosuite-current.jar:build/classes/:lib/*  /home/liumengjiao/Desktop/CI/Evosuite/Closure_153/Closure/evosuite/1/com/google/javascript/jscomp/SyntacticScopeCreator_ESTest.java /home/liumengjiao/Desktop/CI/Evosuite/Closure_153/Closure/evosuite/1/com/google/javascript/jscomp/Normalize_ESTest_scaffolding.java /home/liumengjiao/Desktop/CI/Evosuite/Closure_153/Closure/evosuite/1/com/google/javascript/jscomp/Normalize_ESTest.java /home/liumengjiao/Desktop/CI/Evosuite/Closure_153/Closure/evosuite/1/com/google/javascript/jscomp/SyntacticScopeCreator_ESTest_scaffolding.java /home/liumengjiao/Desktop/CI/Evosuite/Closure_153/Closure/evosuite/0/com/google/javascript/jscomp/SyntacticScopeCreator_ESTest.java /home/liumengjiao/Desktop/CI/Evosuite/Closure_153/Closure/evosuite/0/com/google/javascript/jscomp/Normalize_ESTest_scaffolding.java /home/liumengjiao/Desktop/CI/Evosuite/Closure_153/Closure/evosuite/0/com/google/javascript/jscomp/Normalize_ESTest.java /home/liumengjiao/Desktop/CI/Evosuite/Closure_153/Closure/evosuite/0/com/google/javascript/jscomp/SyntacticScopeCreator_ESTest_scaffolding.java >> evosuite-report-clz/test_build.log 2>&1

/home/liumengjiao/Desktop/CI/Evosuite/Closure_153/Closure/evosuite/0/com/google/javascript/jscomp/SyntacticScopeCreator_ESTest.java:21: error: duplicate class: com.google.javascript.jscomp.SyntacticScopeCreator_ESTest
public class SyntacticScopeCreator_ESTest extends SyntacticScopeCreator_ESTest_scaffolding {
       ^
/home/liumengjiao/Desktop/CI/Evosuite/Closure_153/Closure/evosuite/0/com/google/javascript/jscomp/Normalize_ESTest_scaffolding.java:18: error: duplicate class: com.google.javascript.jscomp.Normalize_ESTest_scaffolding
public class Normalize_ESTest_scaffolding {
       ^
/home/liumengjiao/Desktop/CI/Evosuite/Closure_153/Closure/evosuite/0/com/google/javascript/jscomp/Normalize_ESTest.java:26: error: duplicate class: com.google.javascript.jscomp.Normalize_ESTest
public class Normalize_ESTest extends Normalize_ESTest_scaffolding {
       ^
/home/liumengjiao/Desktop/CI/Evosuite/Closure_153/Closure/evosuite/0/com/google/javascript/jscomp/SyntacticScopeCreator_ESTest_scaffolding.java:18: error: duplicate class: com.google.javascript.jscomp.SyntacticScopeCreator_ESTest_scaffolding
public class SyntacticScopeCreator_ESTest_scaffolding {
       ^
4 errors
